<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#50000000"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sleep_timer"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_close_black_24dp"
                android:visibility="gone" />

        </RelativeLayout>


        <TextView
            android:id="@+id/timer_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/stop_playing_after"
            android:textAppearance="?android:textAppearance"
            android:textColor="@color/white" />

        <SeekBar
            android:id="@+id/seek_arc"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:max="120"
            android:progressBackgroundTint="@color/colorAccent"
            android:progressTint="@color/t15"
            android:thumbTint="@color/t15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDisabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/disabled"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/white" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min120"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/timer_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/stop_playing_after"
            android:textAppearance="?android:textAppearance"
            android:textColor="@color/white"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDisable"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="@string/disabled"
                android:textAppearance="?android:textAppearanceButton"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtCancel"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAppearance="?android:textAppearanceButton"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txtSave"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="@string/ok"
                android:textAppearance="?android:textAppearanceButton"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
