<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#50000000"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/rename_file"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_close_black_24dp"
                android:visibility="gone" />

        </RelativeLayout>

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_new_file_name"
            android:maxLines="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCancel"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:background="@drawable/dialog_button_shape"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAppearance="?android:textAppearanceButton"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txtSave"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_marginStart="50dp"
                android:background="@drawable/dialog_button_shape"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:text="@string/ok"
                android:textAppearance="?android:textAppearanceButton"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
