<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#50000000"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSleepTimer"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:text="@string/sleep_timer"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/repeat_one"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <CheckBox
                    android:id="@+id/cbRepeatOne"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:buttonTint="@color/white"
                    android:layoutDirection="rtl"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp">

                <TextView
                    android:id="@+id/txtShareVideo"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:text="@string/share_video"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtAudioTrack"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:text="@string/track"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>
            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_margin="@dimen/_5sdp"-->
            <!--                android:orientation="horizontal">-->

            <!--                <TextView-->
            <!--                    android:id="@+id/txtbackground"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="35dp"-->
            <!--                    android:gravity="center_vertical"-->
            <!--                    android:text="@string/play_background"-->
            <!--                    android:textColor="@color/white"-->
            <!--                    android:textSize="16sp" />-->

            <!--            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSetting"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:text="@string/settings_appbar"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtother"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:text="@string/other"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
